# sesame-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  LICENSE-SPEC  README.md  SESAME.md
.github/workflows/: ci.yml
benches/: load.rs
cpp/: CMakeLists.txt  README.md  conanfile.py
cpp/cmake/: sesameConfig.cmake.in
cpp/examples/: sign_request.cpp
cpp/include/sesame/: canonical.hpp  crypto.hpp  hex.hpp  keys.hpp  message.hpp  protocol.hpp  replay.hpp  sesame.hpp  tier1.hpp  tier3.hpp
cpp/ports/sesame-esam/: portfile.cmake  vcpkg.json
cpp/src/: civil_time.h  crypto_openssl.cpp  message.cpp  protocol.cpp  tier1.cpp  tier3.cpp
cpp/tests/: conformance.cpp  unit.cpp
examples/: sign_request.rs
go/: README.md  canonical.go  conformance_test.go  doc.go  go.mod  keys.go  message.go  protocol.go  replay.go  tier1.go  tier3.go  unit_test.go
go/examples/sign_request/: main.go
python/: README.md  pyproject.toml
python/examples/: sign_request.py
python/src/sesame/: __init__.py  canonical.py  keys.py  message.py  protocol.py  replay.py  tier1.py  tier3.py
python/tests/: test_conformance.py  test_unit.py
src/: auth.rs  axum_adapter.rs  canonical.rs  cipher.rs  encoding.rs  error.rs  headers.rs  keys.rs  lib.rs  message.rs  replay.rs  store.rs  tier1_hmac.rs  tier2_authz.rs  tier3_aead.rs  traits.rs  types.rs  vectors.rs  verifier.rs
test-vectors/: README.md  gcm.json  signing.json  tier1.json  tier3.json
tests/: conformance.rs
tools/golden-extractor/: .gitignore  Cargo.toml  README.md
tools/golden-extractor/src/: main.rs
