[package]
# crates.io package name (the bare `sesame` is taken). The library/import name
# stays `sesame` via [lib] below, so dependents write
# `sesame = { package = "sesame-esam", ... }` and `use sesame::...`.
name = "sesame-esam"
version = "0.1.3"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "SESAME: the proposed SCTE 130-9 security layer for the ESAM interface. HMAC-SHA256 authentication, channel-scoped authorization, and AES-256-GCM payload encryption carried in HTTP headers, with no ESAM XML schema change."
repository = "https://github.com/bokelleher/sesame-sdk"
homepage = "https://github.com/bokelleher/sesame-sdk"
documentation = "https://docs.rs/sesame-esam"
keywords = ["scte", "esam", "sesame", "hmac", "authentication"]
categories = ["cryptography", "authentication"]
readme = "README.md"
exclude = ["/.github", "/tools", "/cpp", "/python", "/go"]

[lib]
name = "sesame"

[features]
# Default includes the RNG helpers needed to SIGN (fresh nonce/IV). Verification
# is RNG-free; a verify-only or embedded host can build with
# `--no-default-features` and supply its own nonces/IVs.
default = ["rng"]

# CSPRNG helpers: `sign_response`, `tier3_aead::random_iv`. Pulls `rand`.
rng = ["dep:rand"]

# serde derives on the conformance-vector types (used by tests and tooling).
serde = ["dep:serde"]

# `http::HeaderMap` adapter for axum/hyper/tower hosts.
axum = ["dep:http"]

[dependencies]
# Pure crypto + protocol core (RustCrypto + time).
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
time = { version = "0.3.36", features = ["formatting", "parsing"] }

# Optional.
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
http = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "load"
harness = false
